--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ SQLAlchemy==1.3.22
 SQLAlchemy-Utils==0.41.1
 alembic==1.5.2
 psycopg2==2.8.6
-psycopg2-binary==2.9.3
+psycopg2-binary==2.9.3 # PythonからPostgreSQLに接続するためのパッケージ
 pydantic[email]==1.6.1
 python-jose[cryptography]==3.2.0
 python-multipart==0.0.6
